# Kvasir_Segmentation

./: .gitignore  predict.py  pyproject.toml  train.py  train_unet.py
seg_modules/: data.py  loss.py  losses.py  train_utils.py  unet.py
seg_modules/architectures/segformer/: __init__.py  layers.py  model_configs.py  models.py
seg_modules/architectures/unet/: __init__.py  layers.py  models.py
seg_modules/training/: __init__.py  process.py  utils.py
seg_modules/unet/: __init__.py  layers.py  models.py
